# anari-superbuild

./: .envrc  CMakeLists.txt  README.md  add_dependency.cmake
.github/workflows/: anari-superbuild-ci.yml
dependencies/: dep_anari_ospray.cmake  dep_anari_sdk.cmake  dep_anari_visionaray.cmake  dep_ospray.cmake  dep_pynari.cmake  dep_visionaray.cmake
